# cortado

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE.md  README.md  a.scpt  index.html  main-screen.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/workflows/: cd.yml  ci-build.yml  ci.yml
.opencode/plans/: status-priority-dedup.md
.playwright-mcp/: page-2026-03-31T18-15-48-218Z.yml
.todo/US-activity-limits/: 01-configurable-limit.md  02-ranking-strategy.md  main.md
.todo/US-brand/: 01-install-tools.md  02-tray-icon.md  03-app-icon.md  04-generate-variants.md  05-verify.md  main.md
showcases/: animations-showcase.html  app-icon-showcase.html  empty-state-showcase.html  enhanced-activity-menu-showcase.html  feed-catalog-showcase.html  feed-sort-order-showcase.html  main-screen-final-layout.html  main-screen-layout-alternatives.html  main-screen-showcase.html  main-screen-split-drilldown-showcase.html  main-screen-stable-list-variants.html  main-screen-variant-d-subvariants.html  menubar-feed-panel-showcase.html  menubar-status-indicator-showcase.html  native-menubar-menu-showcase.html  notification-settings-redesign.html  premium-menubar-showcase.html  save-feedback-showcase.html  settings-c-subvariants-showcase.html  settings-color-theme-showcase.html  settings-dependency-hints-showcase.html  settings-edit-flow-refined-showcase.html  settings-edit-flow-showcase.html  settings-l5-sidebar-cards-showcase.html  settings-layout-showcase.html  settings-test-feed-showcase.html  settings-window-showcase.html  shimmer-loading-showcase.html  tray-icon-showcase.html  variant3-subvariants-showcase.html
specs/: cd.md  ci.md  ci_cd.md  feeds.md  glossary.md  harness-interchange.md  main.md  menubar.md  status.md  terminal_integration.md  ux_design.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: core.json  main-screen.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_env.rs  app_settings.rs  command.rs  fns.rs  main.rs  main_screen.rs  panel.rs  settings_config.rs  tray.rs  tray_icon.rs  ui_snapshot.rs
src-tauri/src/feed/: ado_pr.rs  changelog.rs  concurrent.rs  config.rs  config_watcher.rs  connectivity.rs  cortado_update.rs  dependency.rs  field_overrides.rs  github_actions.rs  github_common.rs  github_pr.rs  harness_watcher.rs  http_health.rs  mod.rs  process.rs  runtime.rs  shell.rs
src-tauri/src/feed/harness/: copilot.rs  e2e.rs  feed.rs  generic.rs  mod.rs
src-tauri/src/notification/: change_detection.rs  content.rs  dispatch.rs  integration_tests.rs  mod.rs
src-tauri/src/terminal_focus/: e2e.rs  ghostty.rs  mod.rs  pid_ancestry.rs  tmux.rs
src-tauri/src/terminal_focus/terminals/: cmux.rs  ghostty.rs  iterm2.rs  kitty.rs  mod.rs  terminal_app.rs  wezterm.rs
videos/: README.md  package-lock.json  package.json
(+409 files in other folders)
