[package]
name = "cortado"
version = "0.2.0"
description = "Cortado cross-platform extensible watcher"
authors = ["Cortado contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
popover = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
menubar = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
system-notification = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

tokio = { version = "1.37.0", features = ["time"] }
tauri-plugin-shell = "2.0.0-beta.7"

[features]
# Used for production builds and when `devPath` points to the filesystem.
custom-protocol = ["tauri/custom-protocol"]
# Old objc/sel_impl macros emitted by some transitive deps reference
# `feature = "cargo-clippy"`; declaring it here keeps check-cfg quiet.
cargo-clippy = []
