[package]
name = "cortado"
version = "0.2.0"
description = "Cortado cross-platform extensible watcher"
authors = ["Cortado contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.0", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
anyhow = "1.0.98"
async-trait = "0.1.88"
dirs = "6.0.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.22"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
popover = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
menubar = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
system-notification = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

tokio = { version = "1.37.0", features = ["time", "process", "sync", "rt", "macros"] }
tauri-plugin-shell = "2.0.0-beta.7"
jiff = "0.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"

[features]
# Used for production builds and when `devPath` points to the filesystem.
custom-protocol = ["tauri/custom-protocol"]
# Old objc/sel_impl macros emitted by some transitive deps reference
# `feature = "cargo-clippy"`; declaring it here keeps check-cfg quiet.
cargo-clippy = []
